<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    >
                    <ImageView
                        android:src="@drawable/bike_logo"
                        android:layout_width="60dp"
                        android:layout_height="60dp" />
                </LinearLayout>
            </LinearLayout>
            <HorizontalScrollView
                android:id="@+id/scv_categories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="14dp"
                    >
                    <com.google.android.material.imageview.ShapeableImageView
                        app:shapeAppearanceOverlay="@style/rounded"
                        android:layout_width="140dp"
                        android:layout_height="140dp"
                        android:src="@drawable/category_1"
                        android:layout_marginRight="20dp"
                    />
                    <com.google.android.material.imageview.ShapeableImageView
                        app:shapeAppearanceOverlay="@style/rounded"
                        android:layout_width="140dp"
                        android:layout_height="140dp"
                        android:src="@drawable/category_2"
                        android:layout_marginRight="20dp"
                        />
                    <com.google.android.material.imageview.ShapeableImageView
                        app:shapeAppearanceOverlay="@style/rounded"
                        android:layout_width="140dp"
                        android:layout_height="140dp"
                        android:src="@drawable/category_3"
                        android:layout_marginRight="20dp"
                        />
                </LinearLayout>
            </HorizontalScrollView>
            <HorizontalScrollView
                android:id="@+id/collections"
                android:layout_width="match_parent"
                android:background="@color/gray_light"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    android:paddingHorizontal="14dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/category_todos"
                        android:background="@drawable/rounded_chip"
                        android:textColor="@color/white"
                        android:paddingHorizontal="20dp"
                        android:paddingVertical="10dp"
                        android:layout_marginRight="6dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/category_series_e"
                        android:background="@drawable/rounded_chip_inactive"
                        android:textColor="@color/white"
                        android:paddingHorizontal="20dp"
                        android:paddingVertical="10dp"
                        android:layout_marginRight="6dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/category_montana"
                        android:background="@drawable/rounded_chip_inactive"
                        android:textColor="@color/white"
                        android:paddingHorizontal="20dp"
                        android:paddingVertical="10dp"
                        android:layout_marginRight="6dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/category_partes"
                        android:background="@drawable/rounded_chip_inactive"
                        android:textColor="@color/white"
                        android:paddingHorizontal="20dp"
                        android:paddingVertical="10dp"
                        android:layout_marginRight="6dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/category_isotypes"
                        android:background="@drawable/rounded_chip_inactive"
                        android:textColor="@color/white"
                        android:paddingHorizontal="20dp"
                        android:paddingVertical="10dp"
                        android:layout_marginRight="6dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/category_merch"
                        android:background="@drawable/rounded_chip_inactive"
                        android:textColor="@color/white"
                        android:paddingHorizontal="20dp"
                        android:paddingVertical="10dp"
                        android:layout_marginRight="6dp"
                        />

                </LinearLayout>
            </HorizontalScrollView>
            <LinearLayout
                android:layout_width="match_parent"
                android:padding="16dp"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_promociones"
                    android:textSize="28sp"
                    android:fontFamily="@font/bebasneue_regular"
                    />
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_termina_en"
                        android:layout_marginRight="12dp"
                    />
                    <com.google.android.material.chip.Chip
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_oferta_restante"
                        app:chipBackgroundColor="@color/crimson"
                        android:textColor="@color/white"/>
                    <TextView
                        android:layout_weight="1"
                        android:textAlignment="viewEnd"
                        android:layout_width="wrap_content"
                        android:fontFamily="@font/bebasneue_regular"
                        android:textSize="24sp"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_ver_todos"
                        />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                >
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:orientation="vertical"
                        android:background="@drawable/rounded_product"
                        android:padding="10dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">
                        <com.google.android.material.imageview.ShapeableImageView
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            app:shapeAppearanceOverlay="@style/rounded"
                            android:src="@drawable/bike_1"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/lbl_cantidad"
                            android:textColor="@color/crimson"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/lbl_nombre_producto_segundo"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:textAlignment="textEnd"
                            android:layout_height="wrap_content"
                            android:text="@string/lbl_precio"
                            />
                    </LinearLayout>
                    <LinearLayout
                    android:orientation="vertical"
                    android:background="@drawable/rounded_product"
                    android:padding="10dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        app:shapeAppearanceOverlay="@style/rounded"
                        android:src="@drawable/bike_2"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_cantidad"
                        android:textColor="@color/crimson"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_nombre_producto"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:textAlignment="textEnd"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_precio"
                        />
                </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:orientation="vertical"
                        android:background="@drawable/rounded_product"
                        android:padding="10dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">
                        <com.google.android.material.imageview.ShapeableImageView
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            app:shapeAppearanceOverlay="@style/rounded"
                            android:src="@drawable/bike_3"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/lbl_cantidad"
                            android:textColor="@color/crimson"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/lbl_nombre_producto_segundo"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:textAlignment="textEnd"
                            android:layout_height="wrap_content"
                            android:text="@string/lbl_precio"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:orientation="vertical"
                        android:background="@drawable/rounded_product"
                        android:padding="10dp"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">
                        <com.google.android.material.imageview.ShapeableImageView
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            app:shapeAppearanceOverlay="@style/rounded"
                            android:src="@drawable/bike_4"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/lbl_cantidad"
                            android:textColor="@color/crimson"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/lbl_nombre_producto_tercero"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:textAlignment="textEnd"
                            android:layout_height="wrap_content"
                            android:text="@string/lbl_precio"
                            />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                >
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_comprar"
                    android:textSize="22sp"
                    android:fontFamily="@font/bebasneue_regular"
                    android:background="@color/crimson"
                    android:textColor="@color/white"
                    android:padding="16dp"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>